# fastapi-auth

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile-celery  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api_v1/: __init__.py
app/api_v1/controllers/: auth_controller.py
app/api_v1/depends/: __init__.py  auth_router_depends.py
app/api_v1/routers/: auth_router.py  user_router.py
app/api_v1/schemas/: __init__.py  login_schemas.py  register_schemas.py  validate_schemas.py
app/api_v1/services/: __init__.py  auth_service.py  token_service.py  user_service.py
app/auth/: README.md  utils.py
app/core/: __init__.py  config.py  settings.py
app/core/models/: token.py  user.py
app/tasks/: __init__.py  config.py  tasks.py
